// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toJSON 1`] = `
Object {
  "attrs": Array [],
  "children": Array [
    Object {
      "attrs": Array [
        Object {
          "name": "data-index",
          "value": false,
        },
      ],
      "children": Array [],
      "event": Object {},
      "tagName": "view",
    },
    Object {
      "attrs": Array [],
      "children": Array [
        Object {
          "attrs": Array [
            Object {
              "name": "class",
              "value": "child",
            },
          ],
          "children": Array [
            "1",
          ],
          "event": Object {},
          "tagName": "view",
        },
      ],
      "event": Object {},
      "tagName": "child",
    },
    Object {
      "attrs": Array [],
      "children": Array [
        Object {
          "attrs": Array [
            Object {
              "name": "class",
              "value": "child",
            },
          ],
          "children": Array [
            "2",
          ],
          "event": Object {},
          "tagName": "view",
        },
      ],
      "event": Object {},
      "tagName": "child",
    },
    Object {
      "attrs": Array [],
      "children": Array [
        Object {
          "attrs": Array [
            Object {
              "name": "class",
              "value": "child",
            },
          ],
          "children": Array [
            "3",
          ],
          "event": Object {},
          "tagName": "view",
        },
      ],
      "event": Object {},
      "tagName": "child",
    },
    Object {
      "attrs": Array [],
      "children": Array [
        Object {
          "attrs": Array [
            Object {
              "name": "class",
              "value": "child",
            },
          ],
          "children": Array [],
          "event": Object {},
          "tagName": "view",
        },
      ],
      "event": Object {
        "longtap": Object {
          "handler": "onCaptureMutatedLongTap",
          "id": 0,
          "isCapture": true,
          "isCatch": false,
          "isMutated": true,
          "name": "longtap",
        },
        "tap": Object {
          "handler": "onTap",
          "id": 0,
          "isCapture": false,
          "isCatch": false,
          "isMutated": false,
          "name": "tap",
        },
        "touchend": Object {
          "handler": "onMutatedtouchend",
          "id": 0,
          "isCapture": false,
          "isCatch": true,
          "isMutated": true,
          "name": "touchend",
        },
        "touchmove": Object {
          "handler": "onCaptureTouchMove",
          "id": 0,
          "isCapture": true,
          "isCatch": false,
          "isMutated": false,
          "name": "touchmove",
        },
        "touchstart": Object {
          "handler": "onCatchTouchStart",
          "id": 0,
          "isCapture": false,
          "isCatch": true,
          "isMutated": false,
          "name": "touchstart",
        },
      },
      "tagName": "child",
    },
  ],
  "event": Object {},
  "tagName": "main",
}
`;

exports[`toJSON 2`] = `
Object {
  "attrs": Array [],
  "children": Array [
    Object {
      "attrs": Array [
        Object {
          "name": "data-index",
          "value": true,
        },
      ],
      "children": Array [],
      "event": Object {},
      "tagName": "view",
    },
  ],
  "event": Object {},
  "tagName": "main",
}
`;

exports[`virtual host 1`] = `
Object {
  "attrs": Array [],
  "children": Array [
    Object {
      "attrs": Array [],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "else",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [
        Object {
          "name": "class",
          "value": "item",
        },
      ],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "0-1-a",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [
        Object {
          "name": "class",
          "value": "item",
        },
      ],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "1-2-a",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [],
      "children": Array [
        "0",
      ],
      "event": Object {},
      "tagName": "span",
    },
  ],
  "event": Object {},
  "tagName": "main",
}
`;

exports[`virtual host 2`] = `
Object {
  "attrs": Array [],
  "children": Array [
    Object {
      "attrs": Array [],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "if",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [
        Object {
          "name": "class",
          "value": "item",
        },
      ],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "0-1-a",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [
        Object {
          "name": "class",
          "value": "item",
        },
      ],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "1-2-a",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [
        Object {
          "name": "class",
          "value": "item",
        },
      ],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "2-3-a",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [],
      "children": Array [
        "1",
      ],
      "event": Object {},
      "tagName": "span",
    },
  ],
  "event": Object {},
  "tagName": "main",
}
`;

exports[`virtual host 3`] = `
Object {
  "attrs": Array [],
  "children": Array [
    Object {
      "attrs": Array [],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "if",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [
        Object {
          "name": "class",
          "value": "item",
        },
      ],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "0-1-a",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [
        Object {
          "name": "class",
          "value": "item",
        },
      ],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "1-2-a",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [
        Object {
          "name": "class",
          "value": "item",
        },
      ],
      "children": Array [
        Object {
          "attrs": Array [],
          "children": Array [
            "2-3-a",
          ],
          "event": Object {},
          "tagName": "div",
        },
      ],
      "event": Object {},
      "tagName": "wx-view",
    },
    Object {
      "attrs": Array [],
      "children": Array [
        "1",
      ],
      "event": Object {},
      "tagName": "span",
    },
  ],
  "event": Object {},
  "tagName": "main",
}
`;
